
[TestNamingConvention/invalid-0 - 1]
Diagnostic 1: doesNotMatchFormat (1:7 - 1:9)
Message: Variable name `x_x` must match one of the following formats: camelCase, UPPER_CASE
   1 | const x_x = 1;
     |       ~~~
---

[TestNamingConvention/invalid-1 - 1]
Diagnostic 1: doesNotMatchFormat (1:7 - 1:9)
Message: Variable name `x_x` must match one of the following formats: camelCase, UPPER_CASE
   1 | const x_x = 1;
     |       ~~~
---

[TestNamingConvention/invalid-2 - 1]
Diagnostic 1: doesNotMatchFormat (2:15 - 2:27)
Message: Variable name `child_process` must match one of the following formats: camelCase
   1 | 
   2 |         const child_process = require('child_process');
     |               ~~~~~~~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-3 - 1]
Diagnostic 1: doesNotMatchFormatTrimmed (2:23 - 2:37)
Message: Variable name `any_camelCase01` trimmed as `camelCase01` must match one of the following formats: UPPER_CASE
   1 | 
   2 |         declare const any_camelCase01: any;
     |                       ~~~~~~~~~~~~~~~
   3 |         declare const any_camelCase02: any | null;

Diagnostic 2: doesNotMatchFormatTrimmed (3:23 - 3:37)
Message: Variable name `any_camelCase02` trimmed as `camelCase02` must match one of the following formats: UPPER_CASE
   2 |         declare const any_camelCase01: any;
   3 |         declare const any_camelCase02: any | null;
     |                       ~~~~~~~~~~~~~~~
   4 |         declare const any_camelCase03: any | null | undefined;

Diagnostic 3: doesNotMatchFormatTrimmed (4:23 - 4:37)
Message: Variable name `any_camelCase03` trimmed as `camelCase03` must match one of the following formats: UPPER_CASE
   3 |         declare const any_camelCase02: any | null;
   4 |         declare const any_camelCase03: any | null | undefined;
     |                       ~~~~~~~~~~~~~~~
   5 |         declare const string_camelCase01: string;

Diagnostic 4: doesNotMatchFormatTrimmed (5:23 - 5:40)
Message: Variable name `string_camelCase01` trimmed as `camelCase01` must match one of the following formats: snake_case
   4 |         declare const any_camelCase03: any | null | undefined;
   5 |         declare const string_camelCase01: string;
     |                       ~~~~~~~~~~~~~~~~~~
   6 |         declare const string_camelCase02: string | null;

Diagnostic 5: doesNotMatchFormatTrimmed (6:23 - 6:40)
Message: Variable name `string_camelCase02` trimmed as `camelCase02` must match one of the following formats: snake_case
   5 |         declare const string_camelCase01: string;
   6 |         declare const string_camelCase02: string | null;
     |                       ~~~~~~~~~~~~~~~~~~
   7 |         declare const string_camelCase03: string | null | undefined;

Diagnostic 6: doesNotMatchFormatTrimmed (7:23 - 7:40)
Message: Variable name `string_camelCase03` trimmed as `camelCase03` must match one of the following formats: snake_case
   6 |         declare const string_camelCase02: string | null;
   7 |         declare const string_camelCase03: string | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~
   8 |         declare const string_camelCase04: 'a' | null | undefined;

Diagnostic 7: doesNotMatchFormatTrimmed (8:23 - 8:40)
Message: Variable name `string_camelCase04` trimmed as `camelCase04` must match one of the following formats: snake_case
   7 |         declare const string_camelCase03: string | null | undefined;
   8 |         declare const string_camelCase04: 'a' | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~
   9 |         declare const string_camelCase05: string | 'a' | null | undefined;

Diagnostic 8: doesNotMatchFormatTrimmed (9:23 - 9:40)
Message: Variable name `string_camelCase05` trimmed as `camelCase05` must match one of the following formats: snake_case
   8 |         declare const string_camelCase04: 'a' | null | undefined;
   9 |         declare const string_camelCase05: string | 'a' | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~
  10 |         declare const number_camelCase06: number;

Diagnostic 9: doesNotMatchFormatTrimmed (10:23 - 10:40)
Message: Variable name `number_camelCase06` trimmed as `camelCase06` must match one of the following formats: snake_case
   9 |         declare const string_camelCase05: string | 'a' | null | undefined;
  10 |         declare const number_camelCase06: number;
     |                       ~~~~~~~~~~~~~~~~~~
  11 |         declare const number_camelCase07: number | null;

Diagnostic 10: doesNotMatchFormatTrimmed (11:23 - 11:40)
Message: Variable name `number_camelCase07` trimmed as `camelCase07` must match one of the following formats: snake_case
  10 |         declare const number_camelCase06: number;
  11 |         declare const number_camelCase07: number | null;
     |                       ~~~~~~~~~~~~~~~~~~
  12 |         declare const number_camelCase08: number | null | undefined;

Diagnostic 11: doesNotMatchFormatTrimmed (12:23 - 12:40)
Message: Variable name `number_camelCase08` trimmed as `camelCase08` must match one of the following formats: snake_case
  11 |         declare const number_camelCase07: number | null;
  12 |         declare const number_camelCase08: number | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~
  13 |         declare const number_camelCase09: 1 | null | undefined;

Diagnostic 12: doesNotMatchFormatTrimmed (13:23 - 13:40)
Message: Variable name `number_camelCase09` trimmed as `camelCase09` must match one of the following formats: snake_case
  12 |         declare const number_camelCase08: number | null | undefined;
  13 |         declare const number_camelCase09: 1 | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~
  14 |         declare const number_camelCase10: number | 2 | null | undefined;

Diagnostic 13: doesNotMatchFormatTrimmed (14:23 - 14:40)
Message: Variable name `number_camelCase10` trimmed as `camelCase10` must match one of the following formats: snake_case
  13 |         declare const number_camelCase09: 1 | null | undefined;
  14 |         declare const number_camelCase10: number | 2 | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~
  15 |         declare const boolean_camelCase11: boolean;

Diagnostic 14: doesNotMatchFormatTrimmed (15:23 - 15:41)
Message: Variable name `boolean_camelCase11` trimmed as `camelCase11` must match one of the following formats: snake_case
  14 |         declare const number_camelCase10: number | 2 | null | undefined;
  15 |         declare const boolean_camelCase11: boolean;
     |                       ~~~~~~~~~~~~~~~~~~~
  16 |         declare const boolean_camelCase12: boolean | null;

Diagnostic 15: doesNotMatchFormatTrimmed (16:23 - 16:41)
Message: Variable name `boolean_camelCase12` trimmed as `camelCase12` must match one of the following formats: snake_case
  15 |         declare const boolean_camelCase11: boolean;
  16 |         declare const boolean_camelCase12: boolean | null;
     |                       ~~~~~~~~~~~~~~~~~~~
  17 |         declare const boolean_camelCase13: boolean | null | undefined;

Diagnostic 16: doesNotMatchFormatTrimmed (17:23 - 17:41)
Message: Variable name `boolean_camelCase13` trimmed as `camelCase13` must match one of the following formats: snake_case
  16 |         declare const boolean_camelCase12: boolean | null;
  17 |         declare const boolean_camelCase13: boolean | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~~
  18 |         declare const boolean_camelCase14: true | null | undefined;

Diagnostic 17: doesNotMatchFormatTrimmed (18:23 - 18:41)
Message: Variable name `boolean_camelCase14` trimmed as `camelCase14` must match one of the following formats: snake_case
  17 |         declare const boolean_camelCase13: boolean | null | undefined;
  18 |         declare const boolean_camelCase14: true | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~~
  19 |         declare const boolean_camelCase15: false | null | undefined;

Diagnostic 18: doesNotMatchFormatTrimmed (19:23 - 19:41)
Message: Variable name `boolean_camelCase15` trimmed as `camelCase15` must match one of the following formats: snake_case
  18 |         declare const boolean_camelCase14: true | null | undefined;
  19 |         declare const boolean_camelCase15: false | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~~
  20 |         declare const boolean_camelCase16: true | false | null | undefined;

Diagnostic 19: doesNotMatchFormatTrimmed (20:23 - 20:41)
Message: Variable name `boolean_camelCase16` trimmed as `camelCase16` must match one of the following formats: snake_case
  19 |         declare const boolean_camelCase15: false | null | undefined;
  20 |         declare const boolean_camelCase16: true | false | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~~
  21 |       
---

[TestNamingConvention/invalid-4 - 1]
Diagnostic 1: doesNotMatchFormatTrimmed (2:23 - 2:41)
Message: Variable name `function_camelCase1` trimmed as `camelCase1` must match one of the following formats: snake_case
   1 | 
   2 |         declare const function_camelCase1: () => void;
     |                       ~~~~~~~~~~~~~~~~~~~
   3 |         declare const function_camelCase2: (() => void) | null;

Diagnostic 2: doesNotMatchFormatTrimmed (3:23 - 3:41)
Message: Variable name `function_camelCase2` trimmed as `camelCase2` must match one of the following formats: snake_case
   2 |         declare const function_camelCase1: () => void;
   3 |         declare const function_camelCase2: (() => void) | null;
     |                       ~~~~~~~~~~~~~~~~~~~
   4 |         declare const function_camelCase3: (() => void) | null | undefined;

Diagnostic 3: doesNotMatchFormatTrimmed (4:23 - 4:41)
Message: Variable name `function_camelCase3` trimmed as `camelCase3` must match one of the following formats: snake_case
   3 |         declare const function_camelCase2: (() => void) | null;
   4 |         declare const function_camelCase3: (() => void) | null | undefined;
     |                       ~~~~~~~~~~~~~~~~~~~
   5 |         declare const function_camelCase4:

Diagnostic 4: doesNotMatchFormatTrimmed (5:23 - 5:41)
Message: Variable name `function_camelCase4` trimmed as `camelCase4` must match one of the following formats: snake_case
   4 |         declare const function_camelCase3: (() => void) | null | undefined;
   5 |         declare const function_camelCase4:
     |                       ~~~~~~~~~~~~~~~~~~~
   6 |           | (() => void)
---

[TestNamingConvention/invalid-5 - 1]
Diagnostic 1: doesNotMatchFormatTrimmed (2:23 - 2:38)
Message: Variable name `array_camelCase1` trimmed as `camelCase1` must match one of the following formats: snake_case
   1 | 
   2 |         declare const array_camelCase1: Array<number>;
     |                       ~~~~~~~~~~~~~~~~
   3 |         declare const array_camelCase2: ReadonlyArray<number> | null;

Diagnostic 2: doesNotMatchFormatTrimmed (3:23 - 3:38)
Message: Variable name `array_camelCase2` trimmed as `camelCase2` must match one of the following formats: snake_case
   2 |         declare const array_camelCase1: Array<number>;
   3 |         declare const array_camelCase2: ReadonlyArray<number> | null;
     |                       ~~~~~~~~~~~~~~~~
   4 |         declare const array_camelCase3: number[] | null | undefined;

Diagnostic 3: doesNotMatchFormatTrimmed (4:23 - 4:38)
Message: Variable name `array_camelCase3` trimmed as `camelCase3` must match one of the following formats: snake_case
   3 |         declare const array_camelCase2: ReadonlyArray<number> | null;
   4 |         declare const array_camelCase3: number[] | null | undefined;
     |                       ~~~~~~~~~~~~~~~~
   5 |         declare const array_camelCase4: readonly number[] | null | undefined;

Diagnostic 4: doesNotMatchFormatTrimmed (5:23 - 5:38)
Message: Variable name `array_camelCase4` trimmed as `camelCase4` must match one of the following formats: snake_case
   4 |         declare const array_camelCase3: number[] | null | undefined;
   5 |         declare const array_camelCase4: readonly number[] | null | undefined;
     |                       ~~~~~~~~~~~~~~~~
   6 |         declare const array_camelCase5:

Diagnostic 5: doesNotMatchFormatTrimmed (6:23 - 6:38)
Message: Variable name `array_camelCase5` trimmed as `camelCase5` must match one of the following formats: snake_case
   5 |         declare const array_camelCase4: readonly number[] | null | undefined;
   6 |         declare const array_camelCase5:
     |                       ~~~~~~~~~~~~~~~~
   7 |           | number[]

Diagnostic 6: doesNotMatchFormatTrimmed (11:23 - 11:38)
Message: Variable name `array_camelCase6` trimmed as `camelCase6` must match one of the following formats: snake_case
  10 |           | undefined;
  11 |         declare const array_camelCase6: [] | null | undefined;
     |                       ~~~~~~~~~~~~~~~~
  12 |         declare const array_camelCase7: [number] | null | undefined;

Diagnostic 7: doesNotMatchFormatTrimmed (12:23 - 12:38)
Message: Variable name `array_camelCase7` trimmed as `camelCase7` must match one of the following formats: snake_case
  11 |         declare const array_camelCase6: [] | null | undefined;
  12 |         declare const array_camelCase7: [number] | null | undefined;
     |                       ~~~~~~~~~~~~~~~~
  13 |         declare const array_camelCase8:

Diagnostic 8: doesNotMatchFormatTrimmed (13:23 - 13:38)
Message: Variable name `array_camelCase8` trimmed as `camelCase8` must match one of the following formats: snake_case
  12 |         declare const array_camelCase7: [number] | null | undefined;
  13 |         declare const array_camelCase8:
     |                       ~~~~~~~~~~~~~~~~
  14 |           | readonly number[]
---

[TestNamingConvention/invalid-6 - 1]
Diagnostic 1: satisfyCustom (2:13 - 2:22)
Message: Variable name `unused_foo` must not match the RegExp: /^unused_\w/u
   1 | 
   2 |         let unused_foo = 'a';
     |             ~~~~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-7 - 1]
Diagnostic 1: satisfyCustom (2:15 - 2:25)
Message: Variable name `_unused_foo` must not match the RegExp: /^unused_\w/u
   1 | 
   2 |         const _unused_foo = 1;
     |               ~~~~~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-8 - 1]
Diagnostic 1: satisfyCustom (2:19 - 2:22)
Message: Interface name `IFoo` must not match the RegExp: /^I[A-Z]/u
   1 | 
   2 |         interface IFoo {}
     |                   ~~~~
   3 |       
---

[TestNamingConvention/invalid-9 - 1]
Diagnostic 1: satisfyCustom (2:15 - 2:18)
Message: Class name `IBar` must not match the RegExp: /^I[A-Z]/u
   1 | 
   2 |         class IBar {}
     |               ~~~~
   3 |       
---

[TestNamingConvention/invalid-10 - 1]
Diagnostic 1: satisfyCustom (2:18 - 2:23)
Message: Function name `fooBar` must match the RegExp: /function/u
   1 | 
   2 |         function fooBar() {}
     |                  ~~~~~~
   3 |       
---

[TestNamingConvention/invalid-11 - 1]
Diagnostic 1: doesNotMatchFormat (2:13 - 2:22)
Message: Variable name `unused_foo` must match one of the following formats: camelCase
   1 | 
   2 |         let unused_foo = 'a';
     |             ~~~~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-12 - 1]
Diagnostic 1: doesNotMatchFormatTrimmed (2:15 - 2:25)
Message: Variable name `_unused_foo` trimmed as `unused_foo` must match one of the following formats: camelCase
   1 | 
   2 |         const _unused_foo = 1;
     |               ~~~~~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-13 - 1]
Diagnostic 1: doesNotMatchFormat (2:18 - 2:24)
Message: Function name `foo_bar` must match one of the following formats: camelCase
   1 | 
   2 |         function foo_bar() {}
     |                  ~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-14 - 1]
Diagnostic 1: satisfyCustom (2:19 - 2:22)
Message: Interface name `IFoo` must not match the RegExp: /^I[A-Z]/u
   1 | 
   2 |         interface IFoo {}
     |                   ~~~~
   3 |       
---

[TestNamingConvention/invalid-15 - 1]
Diagnostic 1: satisfyCustom (2:15 - 2:18)
Message: Class name `IBar` must not match the RegExp: /^I[A-Z]/u
   1 | 
   2 |         class IBar {}
     |               ~~~~
   3 |       
---

[TestNamingConvention/invalid-16 - 1]
Diagnostic 1: doesNotMatchFormat (3:11 - 3:25)
Message: Object Literal Property name `Property Name` must match one of the following formats: strictCamelCase
   2 |         const foo = {
   3 |           'Property Name': 'asdf',
     |           ~~~~~~~~~~~~~~~
   4 |         };
---

[TestNamingConvention/invalid-17 - 1]
Diagnostic 1: doesNotMatchFormatTrimmed (2:15 - 2:23)
Message: Variable name `myfoo_bar` trimmed as `foo_bar` must match one of the following formats: PascalCase
   1 | 
   2 |         const myfoo_bar = 'abcs';
     |               ~~~~~~~~~
   3 |         function fun(myfoo: string) {}

Diagnostic 2: doesNotMatchFormatTrimmed (3:22 - 3:26)
Message: Parameter name `myfoo` trimmed as `foo` must match one of the following formats: PascalCase
   2 |         const myfoo_bar = 'abcs';
   3 |         function fun(myfoo: string) {}
     |                      ~~~~~
   4 |         class foo {

Diagnostic 3: doesNotMatchFormatTrimmed (5:11 - 5:15)
Message: Class Property name `Myfoo` trimmed as `foo` must match one of the following formats: PascalCase
   4 |         class foo {
   5 |           Myfoo: string;
     |           ~~~~~
   6 |         }
---

[TestNamingConvention/invalid-18 - 1]
Diagnostic 1: doesNotMatchFormat (3:28 - 3:33)
Message: Class Property name `fooBar` must match one of the following formats: PascalCase
   2 |         class foo {
   3 |           private readonly fooBar: boolean;
     |                            ~~~~~~
   4 |         }
---

[TestNamingConvention/invalid-19 - 1]
Diagnostic 1: doesNotMatchFormatTrimmed (2:18 - 2:27)
Message: Function name `my_foo_bar` trimmed as `_foo_bar` must match one of the following formats: PascalCase
   1 | 
   2 |         function my_foo_bar() {}
     |                  ~~~~~~~~~~
   3 |       
---

[TestNamingConvention/invalid-20 - 1]
Diagnostic 1: doesNotMatchFormat (3:18 - 3:30)
Message: Class Property name `otherConstant` must match one of the following formats: PascalCase
   2 |         class SomeClass {
   3 |           static otherConstant = 'hello';
     |                  ~~~~~~~~~~~~~
   4 |         }
---

[TestNamingConvention/invalid-21 - 1]
Diagnostic 1: doesNotMatchFormat (3:15 - 3:17)
Message: Parameter name `Baz` must match one of the following formats: camelCase
   2 |         declare class Foo {
   3 |           Bar(Baz: string): void;
     |               ~~~
   4 |         }
---

[TestNamingConvention/invalid-22 - 1]
Diagnostic 1: doesNotMatchFormat (2:22 - 2:34)
Message: Variable name `PascalCaseVar` must match one of the following formats: camelCase
   1 | 
   2 |         export const PascalCaseVar = 1;
     |                      ~~~~~~~~~~~~~
   3 |         export enum PascalCaseEnum {}

Diagnostic 2: doesNotMatchFormat (3:21 - 3:34)
Message: Enum name `PascalCaseEnum` must match one of the following formats: camelCase
   2 |         export const PascalCaseVar = 1;
   3 |         export enum PascalCaseEnum {}
     |                     ~~~~~~~~~~~~~~
   4 |         export class PascalCaseClass {}

Diagnostic 3: doesNotMatchFormat (4:22 - 4:36)
Message: Class name `PascalCaseClass` must match one of the following formats: camelCase
   3 |         export enum PascalCaseEnum {}
   4 |         export class PascalCaseClass {}
     |                      ~~~~~~~~~~~~~~~
   5 |         export function PascalCaseFunction() {}

Diagnostic 4: doesNotMatchFormat (5:25 - 5:42)
Message: Function name `PascalCaseFunction` must match one of the following formats: camelCase
   4 |         export class PascalCaseClass {}
   5 |         export function PascalCaseFunction() {}
     |                         ~~~~~~~~~~~~~~~~~~
   6 |         export interface PascalCaseInterface {}

Diagnostic 5: doesNotMatchFormat (6:26 - 6:44)
Message: Interface name `PascalCaseInterface` must match one of the following formats: camelCase
   5 |         export function PascalCaseFunction() {}
   6 |         export interface PascalCaseInterface {}
     |                          ~~~~~~~~~~~~~~~~~~~
   7 |         export type PascalCaseType = {};

Diagnostic 6: doesNotMatchFormat (7:21 - 7:34)
Message: Type Alias name `PascalCaseType` must match one of the following formats: camelCase
   6 |         export interface PascalCaseInterface {}
   7 |         export type PascalCaseType = {};
     |                     ~~~~~~~~~~~~~~
   8 |       
---

[TestNamingConvention/invalid-23 - 1]
Diagnostic 1: doesNotMatchFormat (2:15 - 2:27)
Message: Variable name `PascalCaseVar` must match one of the following formats: camelCase
   1 | 
   2 |         const PascalCaseVar = 1;
     |               ~~~~~~~~~~~~~
   3 |         enum PascalCaseEnum {}

Diagnostic 2: doesNotMatchFormat (3:14 - 3:27)
Message: Enum name `PascalCaseEnum` must match one of the following formats: camelCase
   2 |         const PascalCaseVar = 1;
   3 |         enum PascalCaseEnum {}
     |              ~~~~~~~~~~~~~~
   4 |         class PascalCaseClass {}

Diagnostic 3: doesNotMatchFormat (4:15 - 4:29)
Message: Class name `PascalCaseClass` must match one of the following formats: camelCase
   3 |         enum PascalCaseEnum {}
   4 |         class PascalCaseClass {}
     |               ~~~~~~~~~~~~~~~
   5 |         function PascalCaseFunction() {}

Diagnostic 4: doesNotMatchFormat (5:18 - 5:35)
Message: Function name `PascalCaseFunction` must match one of the following formats: camelCase
   4 |         class PascalCaseClass {}
   5 |         function PascalCaseFunction() {}
     |                  ~~~~~~~~~~~~~~~~~~
   6 |         interface PascalCaseInterface {}

Diagnostic 5: doesNotMatchFormat (6:19 - 6:37)
Message: Interface name `PascalCaseInterface` must match one of the following formats: camelCase
   5 |         function PascalCaseFunction() {}
   6 |         interface PascalCaseInterface {}
     |                   ~~~~~~~~~~~~~~~~~~~
   7 |         type PascalCaseType = {};

Diagnostic 6: doesNotMatchFormat (7:14 - 7:27)
Message: Type Alias name `PascalCaseType` must match one of the following formats: camelCase
   6 |         interface PascalCaseInterface {}
   7 |         type PascalCaseType = {};
     |              ~~~~~~~~~~~~~~
   8 |         export {
---

[TestNamingConvention/invalid-24 - 1]
Diagnostic 1: doesNotMatchFormat (2:15 - 2:27)
Message: Variable name `PascalCaseVar` must match one of the following formats: camelCase
   1 | 
   2 |         const PascalCaseVar = 1;
     |               ~~~~~~~~~~~~~
   3 |         function PascalCaseFunction() {}

Diagnostic 2: doesNotMatchFormat (3:18 - 3:35)
Message: Function name `PascalCaseFunction` must match one of the following formats: camelCase
   2 |         const PascalCaseVar = 1;
   3 |         function PascalCaseFunction() {}
     |                  ~~~~~~~~~~~~~~~~~~
   4 |         declare function PascalCaseDeclaredFunction();

Diagnostic 3: doesNotMatchFormat (4:26 - 4:51)
Message: Function name `PascalCaseDeclaredFunction` must match one of the following formats: camelCase
   3 |         function PascalCaseFunction() {}
   4 |         declare function PascalCaseDeclaredFunction();
     |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~
   5 |       
---

[TestNamingConvention/invalid-25 - 1]
Diagnostic 1: doesNotMatchFormat (2:17 - 2:26)
Message: Variable name `some_name1` must match one of the following formats: UPPER_CASE
   1 | 
   2 |         const { some_name1 } = {};
     |                 ~~~~~~~~~~
   3 |         const { some_name2 = 2 } = {};

Diagnostic 2: doesNotMatchFormat (3:17 - 3:26)
Message: Variable name `some_name2` must match one of the following formats: UPPER_CASE
   2 |         const { some_name1 } = {};
   3 |         const { some_name2 = 2 } = {};
     |                 ~~~~~~~~~~
   4 |         const { ignored: IgnoredDueToModifiers1 } = {};
---

[TestNamingConvention/invalid-26 - 1]
Diagnostic 1: doesNotMatchFormat (3:13 - 3:17)
Message: Parameter name `aName` must match one of the following formats: UPPER_CASE
   2 |         export function Foo(
   3 |           { aName },
     |             ~~~~~
   4 |           { anotherName = 1 },

Diagnostic 2: doesNotMatchFormat (4:13 - 4:23)
Message: Parameter name `anotherName` must match one of the following formats: UPPER_CASE
   3 |           { aName },
   4 |           { anotherName = 1 },
     |             ~~~~~~~~~~~
   5 |           { ignored: IgnoredDueToModifiers1 },
---

[TestNamingConvention/invalid-27 - 1]
Diagnostic 1: doesNotMatchFormat (3:44 - 3:52)
Message: Class Property name `some_name` must match one of the following formats: UPPER_CASE
   2 |         class Ignored {
   3 |           private static abstract readonly some_name;
     |                                            ~~~~~~~~~
   4 |           IgnoredDueToModifiers = 1;
---

[TestNamingConvention/invalid-28 - 1]
Diagnostic 1: doesNotMatchFormat (4:30 - 4:38)
Message: Parameter Property name `some_name` must match one of the following formats: UPPER_CASE
   3 |           constructor(
   4 |             private readonly some_name,
     |                              ~~~~~~~~~
   5 |             IgnoredDueToModifiers,
---

[TestNamingConvention/invalid-29 - 1]
Diagnostic 1: doesNotMatchFormat (3:26 - 3:34)
Message: Class Method name `some_name` must match one of the following formats: UPPER_CASE
   2 |         class Ignored {
   3 |           private static some_name() {}
     |                          ~~~~~~~~~
   4 |           IgnoredDueToModifiers() {}
---

[TestNamingConvention/invalid-30 - 1]
Diagnostic 1: doesNotMatchFormat (3:30 - 3:38)
Message: Classic Accessor name `some_name` must match one of the following formats: UPPER_CASE
   2 |         class Ignored {
   3 |           private static get some_name() {}
     |                              ~~~~~~~~~
   4 |           get IgnoredDueToModifiers() {}
---

[TestNamingConvention/invalid-31 - 1]
Diagnostic 1: doesNotMatchFormat (2:24 - 2:32)
Message: Class name `some_name` must match one of the following formats: UPPER_CASE
   1 | 
   2 |         abstract class some_name {}
     |                        ~~~~~~~~~
   3 |         class IgnoredDueToModifier {}
---

[TestNamingConvention/invalid-32 - 1]
Diagnostic 1: doesNotMatchFormat (2:15 - 2:23)
Message: Variable name `UnusedVar` must match one of the following formats: snake_case
   1 | 
   2 |         const UnusedVar = 1;
     |               ~~~~~~~~~
   3 |         function UnusedFunc(

Diagnostic 2: doesNotMatchFormat (3:18 - 3:27)
Message: Function name `UnusedFunc` must match one of the following formats: snake_case
   2 |         const UnusedVar = 1;
   3 |         function UnusedFunc(
     |                  ~~~~~~~~~~
   4 |           // this line is intentionally broken out

Diagnostic 3: doesNotMatchFormat (5:11 - 5:21)
Message: Parameter name `UnusedParam` must match one of the following formats: snake_case
   4 |           // this line is intentionally broken out
   5 |           UnusedParam: string,
     |           ~~~~~~~~~~~
   6 |         ) {}

Diagnostic 4: doesNotMatchFormat (7:15 - 7:25)
Message: Class name `UnusedClass` must match one of the following formats: snake_case
   6 |         ) {}
   7 |         class UnusedClass {}
     |               ~~~~~~~~~~~
   8 |         interface UnusedInterface {}

Diagnostic 5: doesNotMatchFormat (8:19 - 8:33)
Message: Interface name `UnusedInterface` must match one of the following formats: snake_case
   7 |         class UnusedClass {}
   8 |         interface UnusedInterface {}
     |                   ~~~~~~~~~~~~~~~
   9 |         type UnusedType<

Diagnostic 6: doesNotMatchFormat (9:14 - 9:23)
Message: Type Alias name `UnusedType` must match one of the following formats: snake_case
   8 |         interface UnusedInterface {}
   9 |         type UnusedType<
     |              ~~~~~~~~~~
  10 |           // this line is intentionally broken out

Diagnostic 7: doesNotMatchFormat (11:11 - 11:25)
Message: Type Parameter name `UnusedTypeParam` must match one of the following formats: snake_case
  10 |           // this line is intentionally broken out
  11 |           UnusedTypeParam,
     |           ~~~~~~~~~~~~~~~
  12 |         > = {};
---

[TestNamingConvention/invalid-33 - 1]
Diagnostic 1: doesNotMatchFormat (3:11 - 3:15)
Message: Object Literal Property name `a a` must match one of the following formats: PascalCase
   2 |         const ignored1 = {
   3 |           'a a': 1,
     |           ~~~~~
   4 |           'b b'() {},

Diagnostic 2: doesNotMatchFormat (4:11 - 4:15)
Message: Object Literal Method name `b b` must match one of the following formats: PascalCase
   3 |           'a a': 1,
   4 |           'b b'() {},
     |           ~~~~~
   5 |           get 'c c'() {

Diagnostic 3: doesNotMatchFormat (5:15 - 5:19)
Message: Classic Accessor name `c c` must match one of the following formats: PascalCase
   4 |           'b b'() {},
   5 |           get 'c c'() {
     |               ~~~~~
   6 |             return 1;

Diagnostic 4: doesNotMatchFormat (8:15 - 8:19)
Message: Classic Accessor name `d d` must match one of the following formats: PascalCase
   7 |           },
   8 |           set 'd d'(value: string) {},
     |               ~~~~~
   9 |         };

Diagnostic 5: doesNotMatchFormat (11:11 - 11:15)
Message: Class Property name `a a` must match one of the following formats: PascalCase
  10 |         class ignored2 {
  11 |           'a a' = 1;
     |           ~~~~~
  12 |           'b b'() {}

Diagnostic 6: doesNotMatchFormat (12:11 - 12:15)
Message: Class Method name `b b` must match one of the following formats: PascalCase
  11 |           'a a' = 1;
  12 |           'b b'() {}
     |           ~~~~~
  13 |           get 'c c'() {

Diagnostic 7: doesNotMatchFormat (13:15 - 13:19)
Message: Classic Accessor name `c c` must match one of the following formats: PascalCase
  12 |           'b b'() {}
  13 |           get 'c c'() {
     |               ~~~~~
  14 |             return 1;

Diagnostic 8: doesNotMatchFormat (16:15 - 16:19)
Message: Classic Accessor name `d d` must match one of the following formats: PascalCase
  15 |           }
  16 |           set 'd d'(value: string) {}
     |               ~~~~~
  17 |         }

Diagnostic 9: doesNotMatchFormat (19:11 - 19:15)
Message: Type Property name `a a` must match one of the following formats: PascalCase
  18 |         interface ignored3 {
  19 |           'a a': 1;
     |           ~~~~~
  20 |           'b b'(): void;

Diagnostic 10: doesNotMatchFormat (20:11 - 20:15)
Message: Type Method name `b b` must match one of the following formats: PascalCase
  19 |           'a a': 1;
  20 |           'b b'(): void;
     |           ~~~~~
  21 |         }

Diagnostic 11: doesNotMatchFormat (23:11 - 23:15)
Message: Type Property name `a a` must match one of the following formats: PascalCase
  22 |         type ignored4 = {
  23 |           'a a': 1;
     |           ~~~~~
  24 |           'b b'(): void;

Diagnostic 12: doesNotMatchFormat (24:11 - 24:15)
Message: Type Method name `b b` must match one of the following formats: PascalCase
  23 |           'a a': 1;
  24 |           'b b'(): void;
     |           ~~~~~
  25 |         };

Diagnostic 13: doesNotMatchFormat (27:11 - 27:15)
Message: Enum Member name `a a` must match one of the following formats: PascalCase
  26 |         enum ignored5 {
  27 |           'a a',
     |           ~~~~~
  28 |         }
---

[TestNamingConvention/invalid-34 - 1]
Diagnostic 1: doesNotMatchFormat (3:11 - 3:23)
Message: Type Property name `foo     Bar` must match one of the following formats: camelCase
   2 |         type Foo = {
   3 |           'foo     Bar': string;
     |           ~~~~~~~~~~~~~
   4 |           '': string;

Diagnostic 2: doesNotMatchFormat (4:11 - 4:12)
Message: Type Property name `` must match one of the following formats: camelCase
   3 |           'foo     Bar': string;
   4 |           '': string;
     |           ~~
   5 |           '0': string;

Diagnostic 3: doesNotMatchFormat (5:11 - 5:13)
Message: Type Property name `0` must match one of the following formats: camelCase
   4 |           '': string;
   5 |           '0': string;
     |           ~~~
   6 |           'foo': string;

Diagnostic 4: doesNotMatchFormat (7:11 - 7:19)
Message: Type Property name `foo-bar` must match one of the following formats: camelCase
   6 |           'foo': string;
   7 |           'foo-bar': string;
     |           ~~~~~~~~~
   8 |           '#foo-bar': string;

Diagnostic 5: doesNotMatchFormat (8:11 - 8:20)
Message: Type Property name `#foo-bar` must match one of the following formats: camelCase
   7 |           'foo-bar': string;
   8 |           '#foo-bar': string;
     |           ~~~~~~~~~~
   9 |         };

Diagnostic 6: doesNotMatchFormat (12:11 - 12:23)
Message: Type Property name `boo-----foo` must match one of the following formats: camelCase
  11 |         interface Bar {
  12 |           'boo-----foo': string;
     |           ~~~~~~~~~~~~~
  13 |         }
---

[TestNamingConvention/invalid-35 - 1]
Diagnostic 1: doesNotMatchFormat (10:24 - 10:31)
Message: Class Method name `asyncBar` must match one of the following formats: snake_case
   9 |           // ❌ error
  10 |           public async asyncBar() {
     |                        ~~~~~~~~
  11 |             return 42;

Diagnostic 2: doesNotMatchFormat (14:18 - 14:26)
Message: Class Method name `AsyncBar2` must match one of the following formats: snake_case
  13 |           // ❌ error
  14 |           public AsyncBar2 = async () => {
     |                  ~~~~~~~~~
  15 |             return 42;

Diagnostic 3: doesNotMatchFormat (18:18 - 18:26)
Message: Class Method name `AsyncBar3` must match one of the following formats: snake_case
  17 |           // ❌ error
  18 |           public AsyncBar3 = async function () {
     |                  ~~~~~~~~~
  19 |             return 42;

Diagnostic 4: doesNotMatchFormat (26:33 - 26:41)
Message: Class Method name `ASYNC_BAR` must match one of the following formats: snake_case
  25 |           // ❌ error
  26 |           public abstract async ASYNC_BAR(): number;
     |                                 ~~~~~~~~~
  27 |         }
---

[TestNamingConvention/invalid-36 - 1]
Diagnostic 1: doesNotMatchFormat (10:17 - 10:24)
Message: Object Literal Method name `AsyncBar` must match one of the following formats: snake_case
   9 |           // ❌ error
  10 |           async AsyncBar() {
     |                 ~~~~~~~~
  11 |             return 42;

Diagnostic 2: doesNotMatchFormat (14:11 - 14:19)
Message: Object Literal Method name `AsyncBar2` must match one of the following formats: snake_case
  13 |           // ❌ error
  14 |           AsyncBar2: async () => {
     |           ~~~~~~~~~
  15 |             return 42;

Diagnostic 3: doesNotMatchFormat (18:11 - 18:19)
Message: Object Literal Method name `AsyncBar3` must match one of the following formats: snake_case
  17 |           // ❌ error
  18 |           AsyncBar3: async function () {
     |           ~~~~~~~~~
  19 |             return 42;
---

[TestNamingConvention/invalid-37 - 1]
Diagnostic 1: doesNotMatchFormat (7:15 - 7:23)
Message: Variable name `AsyncBar1` must match one of the following formats: snake_case
   6 |         // ❌ error
   7 |         const AsyncBar1 = async () => {};
     |               ~~~~~~~~~
   8 |         const async_bar1 = async () => {};

Diagnostic 2: doesNotMatchFormat (12:15 - 12:23)
Message: Variable name `asyncBar5` must match one of the following formats: snake_case
  11 |         // ❌ error
  12 |         const asyncBar5 = async function async_bar6() {};
     |               ~~~~~~~~~
  13 |       
---

[TestNamingConvention/invalid-38 - 1]
Diagnostic 1: doesNotMatchFormat (8:24 - 8:32)
Message: Function name `asyncBar2` must match one of the following formats: snake_case
   7 |         // ❌ error
   8 |         async function asyncBar2() {}
     |                        ~~~~~~~~~
   9 |         const async_bar3 = async function async_bar4() {};

Diagnostic 2: doesNotMatchFormat (12:43 - 12:52)
Message: Function name `ASYNC_BAR4` must match one of the following formats: snake_case
  11 |         // ❌ error
  12 |         const async_bar3 = async function ASYNC_BAR4() {};
     |                                           ~~~~~~~~~~
  13 |       
---

[TestNamingConvention/invalid-39 - 1]
Diagnostic 1: doesNotMatchFormat (6:27 - 6:47)
Message: Class Property name `someAttributeOverride` must match one of the following formats: snake_case
   5 |           // ❌ error
   6 |           public override someAttributeOverride = 1;
     |                           ~~~~~~~~~~~~~~~~~~~~~
   7 |         }
---

[TestNamingConvention/invalid-40 - 1]
Diagnostic 1: doesNotMatchFormat (7:27 - 7:44)
Message: Class Method name `someMethodOverride` must match one of the following formats: snake_case
   6 |           // ❌ error
   7 |           public override someMethodOverride() {
     |                           ~~~~~~~~~~~~~~~~~~
   8 |             return 42;
---

[TestNamingConvention/invalid-41 - 1]
Diagnostic 1: doesNotMatchFormat (6:31 - 6:48)
Message: Classic Accessor name `someGetterOverride` must match one of the following formats: snake_case
   5 |           // ❌ error
   6 |           public override get someGetterOverride(): string;
     |                               ~~~~~~~~~~~~~~~~~~
   7 |           public set someSetter(val: string);

Diagnostic 2: doesNotMatchFormat (10:31 - 10:48)
Message: Classic Accessor name `someSetterOverride` must match one of the following formats: snake_case
   9 |           // ❌ error
  10 |           public override set someSetterOverride(val: string);
     |                               ~~~~~~~~~~~~~~~~~~
  11 |         }
---

[TestNamingConvention/invalid-42 - 1]
Diagnostic 1: doesNotMatchFormat (5:19 - 5:37)
Message: Class Property name `first_private_field` must match one of the following formats: camelCase
   4 |           // ❌ error
   5 |           private first_private_field = 1;
     |                   ~~~~~~~~~~~~~~~~~~~
   6 |           // ❌ error

Diagnostic 2: doesNotMatchFormat (7:11 - 7:29)
Message: Class Property name `secondPrivateField` must match one of the following formats: snake_case
   6 |           // ❌ error
   7 |           #secondPrivateField = 1;
     |           ~~~~~~~~~~~~~~~~~~~
   8 |           #second_private_field = 1;
---

[TestNamingConvention/invalid-43 - 1]
Diagnostic 1: doesNotMatchFormat (5:19 - 5:38)
Message: Class Method name `first_private_method` must match one of the following formats: camelCase
   4 |           // ❌ error
   5 |           private first_private_method() {}
     |                   ~~~~~~~~~~~~~~~~~~~~
   6 |           // ❌ error

Diagnostic 2: doesNotMatchFormat (7:11 - 7:30)
Message: Class Method name `secondPrivateMethod` must match one of the following formats: snake_case
   6 |           // ❌ error
   7 |           #secondPrivateMethod() {}
     |           ~~~~~~~~~~~~~~~~~~~~
   8 |           #second_private_method() {}
---

[TestNamingConvention/invalid-44 - 1]
Diagnostic 1: doesNotMatchFormat (1:13 - 1:18)
Message: Import name `fooBar` must match one of the following formats: PascalCase
   1 | import * as fooBar from 'foo_bar';
     |             ~~~~~~
---

[TestNamingConvention/invalid-45 - 1]
Diagnostic 1: doesNotMatchFormat (1:8 - 1:13)
Message: Import name `FooBar` must match one of the following formats: camelCase
   1 | import FooBar from 'foo_bar';
     |        ~~~~~~
---

[TestNamingConvention/invalid-46 - 1]
Diagnostic 1: doesNotMatchFormat (1:21 - 1:27)
Message: Import name `foo_bar` must match one of the following formats: camelCase
   1 | import { default as foo_bar } from 'foo_bar';
     |                     ~~~~~~~
---

[TestNamingConvention/invalid-47 - 1]
Diagnostic 1: doesNotMatchFormat (1:18 - 1:20)
Message: Import name `foo` must match one of the following formats: PascalCase
   1 | import { "🍎" as foo } from 'foo_bar';
     |                  ~~~
---

[TestNamingConventionTypeParameterScope/invalid-0 - 1]
Diagnostic 1: missingUnderscore (1:20 - 1:20)
Message: Type Parameter name `T` must have one leading underscore(s).
   1 | export type Unused<T> = string;
     |                    ~
---

[TestNamingConventionUpstreamParity/invalid-0 - 1]
Diagnostic 1: doesNotMatchFormat (1:12 - 1:16)
Message: Type Property name `123` must match one of the following formats: snake_case
   1 | type T = { '123': number };
     |            ~~~~~
---

[TestNamingConventionUpstreamParity/invalid-1 - 1]
Diagnostic 1: doesNotMatchFormat (1:20 - 1:30)
Message: Object Literal Property name `validName` must match one of the following formats: snake_case
   1 | export const o = { 'validName': 1 };
     |                    ~~~~~~~~~~~
---

[TestNamingConventionUpstreamParity/invalid-2 - 1]
Diagnostic 1: doesNotMatchFormat (1:60 - 1:69)
Message: Variable name `unused_var` must match one of the following formats: PascalCase
   1 | const obj = { unused_var: 1 }; export default obj; const { unused_var } = obj;
     |                                                            ~~~~~~~~~~
---

[TestNamingConventionUpstreamParity/invalid-3 - 1]
Diagnostic 1: doesNotMatchFormat (1:72 - 1:80)
Message: Variable name `top_level` must match one of the following formats: camelCase
   1 | const top_level = 1; export { top_level }; export function f() { const top_level = 2; return top_level; }
     |                                                                        ~~~~~~~~~
---

[TestNamingConventionUpstreamParity/invalid-4 - 1]
Diagnostic 1: doesNotMatchFormat (1:7 - 1:13)
Message: Variable name `foo_bar` must match one of the following formats: PascalCase
   1 | const foo_bar = 1;
     |       ~~~~~~~
---

[TestNamingConventionUpstreamParity/invalid-5 - 1]
Diagnostic 1: doesNotMatchFormat (1:26 - 1:28)
Message: Auto Accessor name `foo` must match one of the following formats: PascalCase
   1 | class MyClass { accessor foo = 5; }
     |                          ~~~
---

[TestNamingConventionUpstreamParity/invalid-6 - 1]
Diagnostic 1: doesNotMatchFormat (1:21 - 1:23)
Message: Classic Accessor name `Foo` must match one of the following formats: camelCase
   1 | class MyClass { get Foo() { return 1; } }
     |                     ~~~
---

[TestNamingConventionUpstreamParity/invalid-7 - 1]
Diagnostic 1: doesNotMatchFormat (1:23 - 1:25)
Message: Import name `Bar` must match one of the following formats: UPPER_CASE
   1 | import { "foo-bar" as Bar } from 'foo_bar';
     |                       ~~~
---

[TestNamingConventionUpstreamParity/invalid-8 - 1]
Diagnostic 1: doesNotMatchFormat (1:13 - 1:15)
Message: Object Literal Property name `123` must match one of the following formats: camelCase
   1 | const x = { 123: 'a' };
     |             ~~~
---

[TestNamingConventionUpstreamParity/invalid-9 - 1]
Diagnostic 1: doesNotMatchFormat (1:13 - 1:16)
Message: Object Literal Property name `16` must match one of the following formats: camelCase
   1 | const x = { 0x10: 'a' };
     |             ~~~~
---

[TestNamingConventionUpstreamParity/invalid-10 - 1]
Diagnostic 1: doesNotMatchFormat (1:17 - 1:19)
Message: Class Property name `123` must match one of the following formats: camelCase
   1 | class MyClass { 123 = 'a'; }
     |                 ~~~
---

[TestNamingConventionUpstreamParity/invalid-11 - 1]
Diagnostic 1: doesNotMatchFormat (1:19 - 1:21)
Message: Type Method name `Foo` must match one of the following formats: camelCase
   1 | interface I { get Foo(): string }
     |                   ~~~
---

[TestNamingConventionUpstreamParity/invalid-12 - 1]
Diagnostic 1: doesNotMatchFormat (1:16 - 1:18)
Message: Type Method name `Foo` must match one of the following formats: camelCase
   1 | type T = { set Foo(v: string) };
     |                ~~~
---

[TestNamingConventionUpstreamParity/invalid-13 - 1]
Diagnostic 1: doesNotMatchFormat (1:17 - 1:19)
Message: Classic Accessor name `Foo` must match one of the following formats: camelCase
   1 | const o = { get Foo() { return 1; } };
     |                 ~~~
---
